doctordeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor # the deplpoyment name on clusrter
  namespace: default
  labels:
    app: doctor
spec:
  selector:
    matchLabels:
      app: doctor # the pod name that will contain container
  template: # confoguration for deployment
    metadata:
      labels:
        app: doctor
    spec:
      containers:
        - name: doctorapi-container # the container name in POD
          image: doctorapi:v1 # image name that will be pulled
          resources: # very important configuration for the POD so that service will be loaded and executed
            limits:
              cpu: "500m" # allocate half CPU for this service
              memory: "128Mi" # 128 MB of memory
          ports:
            - containerPort: 80            
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: doctorapi-service # the service app name
  name: doctorapi-service # name for the service deployment
spec:
  selector:
     app: doctor  # this must match with the POD
  ports:
    - port: 80  # use the default port so that explicit port number need not to  be used by client e.g. the service will be accessibel as http://localhost/api/CategoryAPI
      protocol: TCP # internal communication protocol in the cluster across the services
      name: http # protocol name that will be used by cleint to make call
      targetPort: 80 # port exposed by container (port:targetport)
  type: ClusterIP # internal networking managed by the Cluster
