ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx # The load balancer
spec:
  rules:
  - http:
      paths:
        - path: /api/doctorapi # the mapping of ROute with actua Backend Service
          backend:
            serviceName: doctorapi-service
            servicePort: 80
        - path: /api/patientapi
          backend:
            serviceName: patientapi-service
            servicePort: 80
